--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@nuxt/ui-pro": "^1.0.1",
     "@pinia/nuxt": "^0.5.1",
+    "@types/uuid": "^9.0.8",
     "@vueuse/nuxt": "^10.9.0",
     "nuxt": "^3.10.3",
     "pinia": "^2.1.7",
+    "uuid": "^9.0.1",
     "vue": "^3.4.19",
     "vue-router": "^4.3.0"
   },
