feat: 開始測試 vuelidate

--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@nuxt/ui-pro": "^1.0.1",
     "@pinia/nuxt": "^0.5.1",
     "@types/uuid": "^9.0.8",
+    "@vuelidate/core": "^2.0.3",
+    "@vuelidate/validators": "^2.0.4",
     "@vueuse/core": "^10.9.0",
     "@vueuse/nuxt": "^10.9.0",
     "nuxt": "^3.10.3",
