--- a/package.json
+++ b/package.json
@@ -17,13 +17,13 @@
     "@vuelidate/validators": "^2.0.4",
     "@vueuse/core": "^10.9.0",
     "@vueuse/nuxt": "^10.9.0",
-    "nuxt": "^3.10.3",
     "pinia": "^2.1.7",
     "uuid": "^9.0.1",
     "vue": "^3.4.19",
     "vue-router": "^4.3.0"
   },
   "devDependencies": {
-    "@nuxtjs/i18n": "^8.1.1"
+    "@nuxtjs/i18n": "^8.1.1",
+    "nuxt": "^3.11.1"
   }
 }
